/*
 * $Id: ChangeLog,v 1.6646 2009/11/22 20:32:11 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2009-12-01 09:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source\rtl\winos.prg
    + OS_ISUSERANADMIN() -> Returns .T. on Win2000 or later if logged in
      user has Administrator access

2009-11-22 18:30 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
   * source/vm/mainstd.c
     ! minor fix on defined to windows platform

2009-11-22 17:30 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
   * contrib/gtwvw/gtwvw.c
     ! minor fix for handling wvw_paint and wvw_timer function ( it was not testing
     is this functions was defined so it could go to infinite loop)

2009-11-21 23:36 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source\vm\arrays.c
    - Removed unused variable pBaseArray from function hb_arrayFill()

2009-11-21 16:14 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * makefile.vc
    - Removed redundant and wrong defines: -DWIN32 -D_WIN32 -D__WIN32__ -DHB_OS_WIN_USED -DHB_OS_WIN_32
      /* I recommend same for all other make files. */

  * include/hbapi.h
    - Removed redundant declaraion of hb_arraySet()

  * source/vm/arrays.c
    % Minor optimizations

  * source/vm/arrayshb.c
    * Support negative argument in aIns() and aDel() protected by #ifndef HB_C52_STRICT

2009-11-20 11:40 UTC+0100 Patrick Mast <patrick.mast@xharbour.com>
  * source\rtl\winos.prg
    + OS_Win7()

2009-11-20 00:02 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbsetup.h
    * Added HB_LEGACY_LEVEL2 by default to admit HB_OS_WIN_32_USED, _WIN64 and HB_WINCE changed by
      HB_OS_WIN_USED, HB_OS_WIN_64, HB_OS_WIN_CE on previous commit. Please don't use it any more.


2009-11-18 10:00 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>